force-app/main/default/objects/Account/fields/Date_Field_test__c.field-meta.xml
<CustomField>
    <fullName>Date_Field_test__c</fullName>
    <description>Date_Field_test</description>
    <label>Date Field test</label>
    <type>Date</type>
</CustomField>