force-app/main/default/objects/Account/fields/MNDA_Fully_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>MNDA_Fully_Executed_Date__c</fullName>
    <inlineHelpText>What date was this MNDA Fully Executed?</inlineHelpText>
    <label>MNDA Fully Executed Date</label>
    <type>Date</type>
</CustomField>