force-app/main/default/objects/Account/fields/MSA_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Date__c</fullName>
    <inlineHelpText>What date was the MSA fully executed?</inlineHelpText>
    <label>MSA Date</label>
    <type>Date</type>
</CustomField>