force-app/main/default/objects/Account/fields/MSA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have we signed an MSA with this account?</inlineHelpText>
    <label>MSA Signed</label>
    <type>Checkbox</type>
</CustomField>