force-app/main/default/objects/Account/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a referral from an investor, advisor, referrer?</description>
    <label>Referral</label>
    <type>Checkbox</type>
</CustomField>