force-app/main/default/objects/Account/fields/Territories__c.field-meta.xml
<CustomField>
    <fullName>Territories__c</fullName>
    <label>Territories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territories</valueSetName>
    </valueSet>
</CustomField>