force-app/main/default/objects/Account/recordTypes/Custom_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Custom_RecordType</fullName>
    <active>true</active>
    <label>CustomRecordType</label>
</RecordType>