force-app/main/default/objects/Account/recordTypes/CustomRecordSample.recordType-meta.xml
<RecordType>
    <fullName>CustomRecordSample</fullName>
    <active>true</active>
    <label>CustomRecordSample</label>
</RecordType>