force-app/main/default/objects/Account/recordTypes/External_Account.recordType-meta.xml
<RecordType>
    <fullName>External_Account</fullName>
    <active>true</active>
    <description>To store accounts outside of Organisation.</description>
    <label>External Account</label>
</RecordType>