force-app/main/default/objects/Account/recordTypes/Internal_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Internal_Accounts</fullName>
    <active>true</active>
    <description>Used for Storing Within Organisation Account Details</description>
    <label>Internal Accounts</label>
</RecordType>